--- a/src/components/index.css
+++ b/src/components/index.css
@@ -34,6 +34,7 @@
 }
 
 .profit_container {
+    user-select: none;
     padding: 50px;
     width: 100%;
     min-height: 300px;
@@ -51,4 +52,13 @@
     box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
     font-size: 0.9rem;
     font-weight: 500;
+}
+
+.percentages {
+    background-color: white;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+    padding: 50px;
 }
