--- a/src/components/index.css
+++ b/src/components/index.css
@@ -84,9 +84,14 @@
     padding: 15px 15px;
     width: 100%;
     border-radius: 10px;
-    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px,
+    rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
     font-size: 0.9rem;
     font-weight: 500;
+    }
+    
+    .compound span {
+        font-weight: 700;
 }
 
 .percentages {
