--- a/src/components/index.css
+++ b/src/components/index.css
@@ -7,6 +7,11 @@
     gap: 25px;
 }
 
+@media screen and (max-width: 450px) {
+    .dw_container {
+        grid-template-columns: 1fr;
+    }
+}
 .earn_style {
     width: 100%;
     min-height: 300px;
